// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth should display alert correctly 1`] = `
<styled.div>
  <Portal
    containerInfo={
      <div
        id="root"
      />
    }
  >
    <styled.div
      url="/images/dark-chess.jpg"
    />
  </Portal>
  <Styled(Form)
    onSubmit={[Function]}
  >
    <Alert
      className="text-center"
      closeLabel="Close alert"
      show={true}
      transition={[Function]}
      variant="danger"
    >
      Error text
    </Alert>
    <FormLabel
      column={false}
      srOnly={false}
    >
      Email
    </FormLabel>
    <FormControl
      aria-label="email"
      className="mb-4 email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <hr />
    <FormLabel
      column={false}
      srOnly={false}
    >
      Hasło
    </FormLabel>
    <FormControl
      className="mb-4 password"
      onChange={[Function]}
      placeholder="Hasło"
      type="password"
      value=""
    />
    <Button
      active={false}
      className="float-left"
      disabled={false}
      type="button"
      variant="success"
    >
      Zarejestruj się!
    </Button>
    <Button
      active={false}
      className="float-right"
      disabled={false}
      type="submit"
      variant="dark"
    >
      Zaloguj
    </Button>
  </Styled(Form)>
</styled.div>
`;

exports[`Auth should render correctly with given props 1`] = `
<styled.div>
  <Portal
    containerInfo={
      <div
        id="root"
      />
    }
  >
    <styled.div
      url="/images/dark-chess.jpg"
    />
  </Portal>
  <Styled(Form)
    onSubmit={[Function]}
  >
    <FormLabel
      column={false}
      srOnly={false}
    >
      Email
    </FormLabel>
    <FormControl
      aria-label="email"
      className="mb-4 email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <hr />
    <FormLabel
      column={false}
      srOnly={false}
    >
      Hasło
    </FormLabel>
    <FormControl
      className="mb-4 password"
      onChange={[Function]}
      placeholder="Hasło"
      type="password"
      value=""
    />
    <Button
      active={false}
      className="float-left"
      disabled={false}
      type="button"
      variant="success"
    >
      Zarejestruj się!
    </Button>
    <Button
      active={false}
      className="float-right"
      disabled={false}
      type="submit"
      variant="dark"
    >
      Zaloguj
    </Button>
  </Styled(Form)>
</styled.div>
`;
